feat: patched build improvement (#13)
* feat: add release creation and Kafka distribution retrieval steps to workflow

* fix: update client-payload structure in Kafka build workflow

* fix: update client-payload keys to use hyphenated format in Kafka build workflow

* fix: update kafka distribution artifact retrieval to support hyphenated versioning

* fix: add missing permissions for actions and packages in build workflow

* fix: update tag-action version and refine Kafka distribution artifact retrieval

* Update build-patched-kafka.yaml

* feat: added new input `target-ref`

* chore: removed target-ref input parameter
it is pinned to main.

* chore: removed target-ref input parameter
it is pinned to main.

* chore: updated run name of the workflow

* Update build-patched-kafka.yaml

* Refactor build workflow for Apache Kafka

Updated the workflow file for building Apache Kafka, including changes to the job structure and input parameters.

* Rename workflow file and update content

--- a/.github/workflows/build-patched-kafka.yaml
+++ b/.github/workflows/build-patched-kafka.yaml
@@ -1,6 +1,9 @@
 # .github/workflows/qb-build-kafka.yml
 name: Build .tgz for Apache Kafka
-run-name: "Image for ${{ github.event.repository.name }}: ${{ github.run_number }} - ${{ github.actor }}"
+run-name: |
+  Kafka: ${{ inputs.kafka-tag }} ||
+  Release tag: ${{ inputs.tag }} ||
+  Qubership-kafka target branch: ${{ inputs.target-ref }}
 
 on:
   workflow_dispatch:
